<resources>
    <string name="app_name">Dainik Khata Book</string>
    <string name="action_settings">Settings</string>
    <string name="amount_hint">Enter Amount</string>
    <string name="desc_hint">Enter Description</string>
    <string name="expense_btn_save">SAVE</string>
    <string name="date_hint">Enter Date</string>
    <string-array name="expense_type">
        <item>Select Type</item>
        <item>Clothing</item>
        <item>Entertainment</item>
        <item>Food</item>
        <item>Transport</item>
        <item>Medical</item>
        <item>Shopping</item>
        <item>Education</item>
        <item>Grocery</item>
        <item>Personal</item>
        <item>Fuel</item>
    </string-array>
    <string-array name="income_type">
        <item>Select Type</item>
        <item>Cash</item>
        <item>Salary</item>
        <item>Loan</item>
    </string-array>
    <string name="img_view_cd">Icon</string>
    <string name="total_income">Incomes</string>
    <string name="total_dashboard_amount">Total: %1$s/-</string>
    <string name="total_sum">Till Today</string>
    <string name="total_expense">Till Today</string>
    <string name="rs_symbol">\u20B9</string>
    <string name="title_activity_income">Add Income</string>
    <string name="balance">balance</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="expense_btn_edit">Edit</string>
    <string name="no_value">""</string>
    <string name="add_button">Add New</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="dashboard_select">Select Expense/Income</string>

    <!-- Preference Titles -->
    <string name="sync_service_password">Backup Service Password</string>
    <string name="sync_header">Backup Service</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Backup Data periodically.</string>
    <string name="backup_summary">Backup your Data to server Periodically. This Service Will
        Run Once a Day When Device is Connected To WI-FI.\n\nNote: By enabling this Service You are
        Consenting to Grant Access to Read Your Device Contacts.
    </string>
    <string name="about_summary">Created By Rahul Malik\n\nApp Version: %1$s</string>
    <string name="expense_summary">Expenses</string>
    <string name="income_summary">Incomes</string>
    <string name="type">Type:</string>
    <string name="total_amount">Total Amount</string>
    <string name="title_activity_dash_board">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard_add">Add</string>
    <string name="title_notifications">Notifications</string>
    <string name="dashboard_img_view">incoming/outgoing</string>
    <string name="description">Description: </string>
    <string name="amount">Amount:</string>
    <string name="date">Date:</string>
    <string name="see_more">See More</string>
    <string name="about">About</string>
    <string name="add_expense">Add Expense</string>
    <string name="report">Report</string>
    <string name="help">Help</string>
    <string name="summary">Summary</string>
    <string name="detail_edit_btn">EDIT</string>
    <string name="detail_del_btn">DELETE</string>
    <string name="password">Password</string>
    <string name="sync_password_summary">Password Required For Backup Service.
        Once Set this password is used to access Sync Server Resources.\n\n
    </string>
</resources>