<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:enableCopying="false"
            app:key="backup"
            app:summary="@string/backup_summary" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_service_password">

        <EditTextPreference
            android:inputType="textPassword"
            android:summary="@string/sync_password_summary"
            android:title="@string/password"
            app:key="api_password" />

    </PreferenceCategory>

    <PreferenceCategory app:title="Backup Service Password Change">

        <Preference
            android:title="Change Password"
            app:key="api_password_change">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="http://exptracker.devram.info/change" />
        </Preference>

    </PreferenceCategory>

</PreferenceScreen>

