<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/activity_main">

    <androidx.cardview.widget.CardView
        android:id="@+id/exp_cardView"
        android:layout_width="166dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        app:cardBackgroundColor="@color/primaryDarkColor"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dashboardExpTitleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:paddingTop="4dp"
                android:text="@string/expense_summary"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/dashboardExpAmountTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/total_dashboard_amount"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="16sp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="166dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        app:cardBackgroundColor="@color/secondaryLightColor"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/exp_cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dashboardIncTitleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:paddingTop="4dp"
                android:text="@string/total_income"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/dashboardIncAmountTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/total_dashboard_amount"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="16sp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TableLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:stretchColumns="*"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exp_cardView"
        app:layout_constraintVertical_bias="0.0">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/dashSettingBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_settings"
                android:drawablePadding="4dp"
                android:drawableTint="?attr/colorControlNormal"
                android:text="@string/action_settings" />

            <Button
                android:id="@+id/dashNewExpBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_dashboard_add"
                android:drawablePadding="4dp"
                android:text="@string/add_expense" />

            <Button
                android:id="@+id/dashAddIncBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_dashboard_add"
                android:drawablePadding="4dp"
                android:text="@string/title_activity_income" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/dashReportBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_report"
                android:drawablePadding="4dp"
                android:text="@string/report" />

            <Button
                android:id="@+id/dashHelpBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_help"
                android:drawablePadding="4dp"
                android:text="@string/help" />

            <Button
                android:id="@+id/dashAboutBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_info"
                android:drawablePadding="4dp"
                android:text="@string/about" />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>