<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/secondaryLightColor">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/detailImgView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/img_view_cd"
            android:cropToPadding="false"
            android:padding="4dp"
            android:scaleType="fitEnd"
            app:layout_constraintBottom_toBottomOf="@+id/detailTypeTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/detailTypeTextView"
            app:layout_constraintTop_toTopOf="@+id/detailTypeTextView"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_tshirt" />

        <TextView
            android:id="@+id/heading_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:padding="4dp"
            android:text="@string/type"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:padding="4dp"
            android:text="@string/total_amount"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/heading_type"
            app:layout_constraintTop_toBottomOf="@+id/heading_type"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/detailTypeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@+id/detailImgView"
            android:padding="8dp"
            android:text="@string/app_name"
            android:textColor="@color/primaryTextColor"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/heading_type"
            app:layout_constraintStart_toStartOf="@+id/detailAmtTxtView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/detailAmtTxtView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="8dp"
            android:padding="8dp"
            android:text="@string/app_name"
            android:textAlignment="viewStart"
            android:textColor="@color/primaryTextColor"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView3"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toTopOf="@+id/textView3"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/detailMoreTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:padding="4dp"
            android:text="@string/see_more"
            android:textAlignment="textEnd"
            android:textAllCaps="true"
            android:textColor="@color/primaryLightColor"
            android:textSize="14sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/detailAmtTxtView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/detailAmtTxtView" />

        <View
            android:id="@+id/divider2"
            android:layout_width="409dp"
            android:layout_height="1dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detailAmtTxtView"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>